--- a/boot/zephyr/prj.conf
+++ b/boot/zephyr/prj.conf
@@ -33,7 +33,10 @@ CONFIG_BOOT_SIGNATURE_KEY_FILE="root-rsa-2048.pem"
 
 CONFIG_FLASH=y
 
-CONFIG_MULTITHREADING=n
+CONFIG_MULTITHREADING=y
+
+# Number of sectors increased because our image is now 840KB instead of 420KB
+CONFIG_BOOT_MAX_IMG_SECTORS=210
 
 ### Various Zephyr boards enable features that we don't want.
 # CONFIG_BT is not set
